objects/EFX__Efax_Account_Setting__c.object
<CustomObject>
    <description>This object is used to hold the efax account authentication information</description>
    <fields>
        <fullName>EFX__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EFX__Inbound_Fax_Type__c</fullName>
        <label>Inbound Fax Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TIFF</fullName>
                </value>
                <value>
                    <fullName>PDF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EFX__Installed_Date__c</fullName>
        <label>Installed Date</label>
        <type>Date</type>
    </fields>
    <label>eFax Account Setting</label>
    <listViews>
        <fullName>EFX__All_Efax_Account_Setting</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Efax Account Setting</label>
    </listViews>
    <nameField>
        <displayFormat>A-{00000}</displayFormat>
        <label>Efax Account Setting Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>eFax Account Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>